# hyper-psx

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
hyper-psx-core/: Cargo.toml
hyper-psx-core/src/: bios.rs  bus.rs  cpu.rs  lib.rs  memory.rs  ram.rs
hyper-psx-core/src/bus/: memory.rs  mod.rs  ram.rs  range.rs
hyper-psx-core/src/cpu/: branch.rs  cop0.rs  cop2.rs  exception.rs  extension.rs  instruction.rs  instructions.rs  mod.rs  register.rs  register_index.rs  special.rs
hyper-psx-core/src/dma/: base_address.rs  channel.rs  channel_control.rs  mod.rs
hyper-psx-core/src/gpu/: gp0.rs  gp1.rs  mod.rs
hyper-psx-core/src/renderer/: color.rs  mod.rs  position.rs  software_renderer.rs  window.rs
hyper-psx-core/src/utils/: mod.rs  sext.rs  zext.rs
src/: logger.rs  main.rs
