#-------------------------------------------------------------------------------------------
# Copyright (c) 2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper-psx-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
thiserror = "1.0"
